--- a/index.html
+++ b/index.html
@@ -1,50 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Example based on http://leafletjs.com/examples/layers-control/example.html -->
-
-        <title>Layers Control Tutorial - Leaflet</title>
+        <title>Map Tile Server</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" integrity="sha512-07I2e+7D8p6he1SIM+1twR5TIrhUQn9+I6yjqD53JQjFiMf8EtC93ty0/5vJTZGF8aAocvHYNEDJajGdNx1IsQ==" crossorigin=""/>
+
+        <!-- Libraries -->
         <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" integrity="sha512-A7vV8IFfih/D732iSSKi20u/ooOfj/AGehOKq0f4vLT1Zr2Y+RX7C+w8A1gaSasGtRUZpF/NZgzSAu4/Gc41Lg==" crossorigin=""></script>
 
-        <style>
-            #map {
-                width: 600px;
-                height: 400px;
-            }
-
-            .leaflet-container {
-                background-color: #FFF;
-            }
-        </style>
+        <!-- Local -->
+        <link rel="stylesheet" href="/index.css"></link>
     </head>
     <body>
+        <div id="map"></div>
 
-        <div id='map'></div>
-
-        <script>
-            var admin0url = './admin0/{z}/{x}/{y}.png';
-            var admin1url = './admin1/{z}/{x}/{y}.png';
-
-            var admin0 = L.tileLayer(admin0url);
-            var admin1 = L.tileLayer(admin1url);
-
-            var map = L.map('map', {
-                center: [40, -80],
-                zoom: 1,
-                layers: [admin0]
-            });
-
-            var layers = {
-                "Admin 0": admin0,
-                "USA Admin 1": admin1
-            };
-
-            L.control.layers(null,layers).addTo(map);
-        </script>
+        <script type="text/javascript" src="/index.js"></script>
     </body>
 </html>
