Frontend now requests ma tile layers using a RESTful strategy. Added a new tile option of Seattle Neighborhoods.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <body>
         <div id="map"></div>
 
+        <script type="text/javascript">
+            // Create the "mts" namespace.
+            window.mts = {};
+        </script>
         <script type="text/javascript" src="/index.js"></script>
     </body>
 </html>
