Route all static files through /static url.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" integrity="sha512-A7vV8IFfih/D732iSSKi20u/ooOfj/AGehOKq0f4vLT1Zr2Y+RX7C+w8A1gaSasGtRUZpF/NZgzSAu4/Gc41Lg==" crossorigin=""></script>
 
         <!-- Local -->
-        <link rel="stylesheet" href="/index.css"></link>
+        <link rel="stylesheet" href="/static/index.css"></link>
     </head>
     <body>
         <div id="map"></div>
@@ -21,6 +21,6 @@
             // Create the "mts" namespace.
             window.mts = {};
         </script>
-        <script type="text/javascript" src="/index.js"></script>
+        <script type="text/javascript" src="/static/index.js"></script>
     </body>
 </html>
