--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
             // Create the "mts" namespace.
             window.mts = {};
         </script>
-        <script type="text/javascript" src="/static/index.js"></script>
+        <script type="text/javascript" src="/static/bundle.js"></script>
     </body>
 </html>
